corriindo bug gulp

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,57 @@
+@use 'hero';
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+$corFundo: #040714;
+$corTextoPrincipal: #c0c0c0;
+$corTextoSecundario: #f9f9f9;
+
+@mixin text($fontSize: 16px){
+    font-size: $fontSize;
+    line-height: $fontSize + 10px;
+    color: $corTextoPrincipal
+}
+
+@mixin title($fontSize: 40px){
+    @include text($fontSize);
+    color: $corTextoSecundario;
+}
+
+
+.text--big{
+    @include text(18px);
+}
+
+.text{
+    @include text;
+}
+
+.text--small{
+    @include text(12px);
+}
+
+.title--big{
+    @include title(44px);
+}
+
+.title{
+    @include title;
+}
+
+.title--small{
+    @include title(28px)
+}
+
+.link-text{
+    @include text(18px);
+    color: $corTextoSecundario;
+    text-decoration: underline;
+}
+
 body{
-    background-color: rgb(105, 126, 119);
+    background-color: $corFundo;
 }
